# rust-test-auditor

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
docs/examples/: README.md  ast_examples.rs  bad_tests.rs  good_tests.rs
src/: ast_analyzer.rs  auditor.rs  config.rs  errors.rs  issue.rs  lib.rs  main.rs  patterns.rs  reports.rs
tests/: ast_integration_test.rs  integration_test.rs
