[package]
name = "rust-test-auditor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5"
walkdir = "2.5"
regex = "1.10"
colored = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"